Fix pizza biome source codec arity